--- a/practicaFinal/src/main/resources/templates/admin.html
+++ b/practicaFinal/src/main/resources/templates/admin.html
@@ -26,6 +26,10 @@
 		/*//////////////////////////////////////////////////////////////////
 		[ FONT ]*/
 
+		input {
+			margin-bottom: 2%;
+		}
+
 		#addUsers {
 			display: none;
 		}
@@ -87,6 +91,13 @@
 			margin-left: 30%;
 			margin-top: 30%;
 		}
+		
+		#assignedRol{
+			position:absolute;
+			top:1%;
+			left:11%;
+			color:white;
+		}
 	</style>
 
 	<script type="text/javascript">
@@ -111,10 +122,7 @@
 				setTimeout(function () {alert("Aqui estamos !!");}, 3000);
 			});
 		}
-
-		miDisplay();
-
-
+		
 		function addUsersFunc() {
 			let addUsers1 = document.getElementById("addUsers");
 			let addEmployeers = document.getElementById("addEmployeers");
@@ -131,6 +139,7 @@
 			showEm.style.display = "none";
 			aniadir.innerHTML = "";
 		}
+
 		function ejercicioClick() {
 			let addUsers1 = document.getElementById("addUsers");
 			let addEmployeers = document.getElementById("addEmployeers");
@@ -149,6 +158,7 @@
 			ejercicioJS.style.display = "block";
 			aniadir.innerHTML = "";
 		}
+
 		function addEmployeersFunc() {
 			let addUsers1 = document.getElementById("addUsers");
 			let addEmployeers = document.getElementById("addEmployeers");
@@ -243,14 +253,6 @@
 			alert(select + ", " + select1 + ", " + select2 + ", " + select3);
 		}
 
-		function checkParImpar(numero) {
-			if (numero % 2 == 0) {
-				alert("Numero par");
-			} else {
-				alert("Numero impar");
-			}
-
-		}
 		function showEmployeersFunc() {
 			let addUsers1 = document.getElementById("addUsers");
 			let addEmployeers = document.getElementById("addEmployeers");
@@ -302,7 +304,7 @@
 			}
 
 		}
-		ejercicioJavascript();
+
 		function dotest(element, event) {
 			const url = "http://localhost:8081/modifyUser";
 			const data = {
@@ -326,6 +328,10 @@
 
 
 <body>
+	<div id="assignedRol">
+		<p>Este usuario tiene permisos de administrador</p>
+		<hr>
+	</div>
 	<div id="contenedor">
 		<div id="formButtons" class="container justify-content-center">
 			<button class="btn btn-primary" name="Crear" onclick="addUsersFunc()" title="Crear" type="submit">Create
