--- a/practicaFinal/src/main/resources/templates/normal.html
+++ b/practicaFinal/src/main/resources/templates/normal.html
@@ -2,7 +2,7 @@
 <!doctype html>
 
 <!-- Representa la raíz de un documento HTML o XHTML. Todos los demás elementos deben ser descendientes de este elemento. -->
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://thymeleaf.org">
 
 <head>
 
@@ -10,172 +10,468 @@
 
 	<title> Formulario de Acceso </title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<meta name="author" content="Videojuegos & Desarrollo">
-	<meta name="description" content="Muestra de un formulario de acceso en HTML y CSS">
-	<meta name="keywords" content="Formulario Acceso, Formulario de LogIn">
-
-	<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
-
-
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+		integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+		crossorigin="anonymous"></script>
 	<style type="text/css">
-		body {
-			font-family: 'Overpass', sans-serif;
-			font-weight: normal;
-			font-size: 100%;
-			color: #1b262c;
+		/*//////////////////////////////////////////////////////////////////
+		[ FONT ]*/
 
-			margin: 0;
+		input {
+			margin-bottom: 2%;
+		}
+
+		#addUsers {
+			display: none;
+		}
+
+		#showUsers {
+			display: none;
+		}
+
+		#delUser {
+			display: none;
+		}
+
+		#showEmployeers {
+			display: none;
+		}
+
+		#addEmployeers {
+			display: none;
+		}
+
+		#delEmployeers {
+			display: none;
+		}
+
+		#loginformAdd {
+			position: absolute;
+			bottom: 10%;
+			left: 11%;
+
+		}
+
+		#practicandoJS {
+			display: none;
+		}
+
+		body {
 			background-color: #0f4c75;
+			padding-top: 5%;
 		}
 
 		#contenedor {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-
-			margin: 0;
-			padding: 0;
-			min-width: 100vw;
-			min-height: 100vh;
-			width: 100%;
-			height: 100%;
+			margin-top: 5%;
+			width: 80%;
+			margin: auto;
 		}
 
-		#central {
-			max-width: 320px;
-			width: 100%;
+		#contenedorFuncionalidades {
+			width: 80%;
+			position: absolute;
+			top: 30%;
 		}
 
-		.titulo {
-			font-size: 250%;
-			color: #bbe1fa;
-			text-align: center;
-			margin-bottom: 20px;
+		#addUsers {
+			margin-left: 30%;
+			margin-top: 20%;
 		}
 
-		#normal {
-			width: 100%;
-			padding: 50px 30px;
-			background-color: #3282b8;
-
-			-webkit-box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
-			-moz-box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
-			box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
-
-			border-radius: 3px 3px 3px 3px;
-			-moz-border-radius: 3px 3px 3px 3px;
-			-webkit-border-radius: 3px 3px 3px 3px;
-
-			box-sizing: border-box;
+		#addEmployeers {
+			margin-left: 30%;
+			margin-top: 30%;
 		}
-
-		#normal input {
-			font-family: 'Overpass', sans-serif;
-			font-size: 110%;
-			color: #1b262c;
-
-			display: block;
-			width: 100%;
-			height: 40px;
-
-			margin-bottom: 10px;
-			padding: 5px 5px 5px 10px;
-
-			box-sizing: border-box;
-
-			border: none;
-			border-radius: 3px 3px 3px 3px;
-			-moz-border-radius: 3px 3px 3px 3px;
-			-webkit-border-radius: 3px 3px 3px 3px;
-		}
-
-		#normal input::placeholder {
-			font-family: 'Overpass', sans-serif;
-			color: #E4E4E4;
-		}
-
-		#normal button {
-			font-family: 'Overpass', sans-serif;
-			font-size: 110%;
-			color: #1b262c;
-			width: 100%;
-			height: 40px;
-			border: none;
-
-			border-radius: 3px 3px 3px 3px;
-			-moz-border-radius: 3px 3px 3px 3px;
-			-webkit-border-radius: 3px 3px 3px 3px;
-
-			background-color: #bbe1fa;
-
-			margin-top: 10px;
-		}
-
-		#normal button:hover {
-			background-color: #0f4c75;
-			color: #bbe1fa;
-		}
-
-		.pie-form {
-			font-size: 90%;
-			text-align: center;
-			margin-top: 15px;
-		}
-
-		.pie-form a {
-			display: block;
-			text-decoration: none;
-			color: #bbe1fa;
-			margin-bottom: 3px;
-		}
-
-		.pie-form a:hover {
-			color: #0f4c75;
-		}
-
-		.inferior {
-			margin-top: 10px;
-			font-size: 90%;
-			text-align: center;
-		}
-
-		.inferior a {
-			display: block;
-			text-decoration: none;
-			color: #bbe1fa;
-			margin-bottom: 3px;
-		}
-
-		.inferior a:hover {
-			color: #3282b8;
+		
+		#assignedRol{
+			position:absolute;
+			top:1%;
+			left:11%;
+			color:white;
 		}
 	</style>
 
 	<script type="text/javascript">
+		class Car {
+			constructor(name, year) {
+				this.name = name;
+				this.year = year;
+			}
+		}
+
+		//Math.trunc(3.2);
+		//Math.sign(2);
+		//Math.cbrt(3);
+		//Math.log2(40);
+		//Math.log10(10);  
+
+
+		//Number.isInteger(3.5);
+
+		async function miDisplay() {
+			let miPromise = new Promise(function (miResolve, miReject) {
+				setTimeout(function () {alert("Aqui estamos !!");}, 3000);
+			});
+		}
+		
+		function addUsersFunc() {
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
+			addUsers1.style.display = "block";
+			addEmployeers.style.display = "none";
+			showUsers.style.display = "none";
+			delEmployeers.style.display = "none";
+			delUser.style.display = "none";
+			showEm.style.display = "none";
+			aniadir.innerHTML = "";
+		}
+
+		function ejercicioClick() {
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
+			let ejercicioJS = document.getElementById("practicandoJS");
+			addUsers1.style.display = "none";
+			addEmployeers.style.display = "none";
+			showUsers.style.display = "none";
+			delEmployeers.style.display = "none";
+			delUser.style.display = "none";
+			showEm.style.display = "none";
+			ejercicioJS.style.display = "block";
+			aniadir.innerHTML = "";
+		}
+
+		function addEmployeersFunc() {
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
+			addUsers1.style.display = "none";
+			addEmployeers.style.display = "block";
+			showUsers.style.display = "none";
+			delEmployeers.style.display = "none";
+			delUser.style.display = "none";
+			showEm.style.display = "none";
+			aniadir.innerHTML = "";
+		}
+		function aniadirPalabra() {
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
+			addUsers1.style.display = "none";
+			addEmployeers.style.display = "none";
+			showUsers.style.display = "none";
+			delEmployeers.style.display = "none";
+			delUser.style.display = "none";
+			showEm.style.display = "none";
+			aniadir.innerHTML = "PRUEBA";
+		}
+		function showUsersFunc() {
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
+			addUsers1.style.display = "none";
+			addEmployeers.style.display = "none";
+			showUsers.style.display = "block";
+			delEmployeers.style.display = "none";
+			delUser.style.display = "none";
+			showEm.style.display = "none";
+			aniadir.innerHTML = "";
+		}
+
+
+		function delUsersFunc() {
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
+			addUsers1.style.display = "none";
+			addEmployeers.style.display = "none";
+			showUsers.style.display = "none";
+			delEmployeers.style.display = "none";
+			delUser.style.display = "block";
+			showEm.style.display = "none";
+			aniadir.innerHTML = "";
+		}
+
+
+		function delEmployeersFunc() {
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
+			addUsers1.style.display = "none";
+			addEmployeers.style.display = "none";
+			showUsers.style.display = "none";
+			delEmployeers.style.display = "none";
+			delUser.style.display = "block";
+			showEm.style.display = "none";
+			aniadir.innerHTML = "";
+		}
+
+		function clickEjercicio() {
+			var select = document.getElementById('frutas').value;
+			var select1 = document.getElementById('pescados').value;
+			var select2 = document.getElementById('carnes').value;
+			var select3 = document.getElementById('drogueria').value;
+
+			alert(select + ", " + select1 + ", " + select2 + ", " + select3);
+		}
+
+		function showEmployeersFunc() {
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
+			addUsers1.style.display = "none";
+			addEmployeers.style.display = "none";
+			showUsers.style.display = "none";
+			delEmployeers.style.display = "none";
+			delUser.style.display = "none";
+			showEm.style.display = "block";
+			aniadir.innerHTML = "";
+		}
+
+		function ejercicioJavascript() {
+
+			let valores = [true, 5, false, "hola", "adios", 2];
+
+			if (valores[3].length > valores[4].length) {
+				console.log("el primero es mas largo que el segundo");
+			} else if (valores[3].length < valores[4].length) {
+				console.log("el segundo es mas largo que el primero");
+			}
+
+			let bool1 = valores[0];
+			let bool2 = valores[2];
+			//para resultado true 
+			if (bool1 || bool2) {
+				console.log("esto es true ");
+			}
+
+			if (bool1 && bool2) {
+				console.log("no entra aqui por que es false");
+			}
+
+			let num1 = valores[1];
+			let num2 = valores[5];
+			let suma = num1 + num2;
+			let resta = num1 - num2;
+			let multiplicacion = num1 * num2;
+
+			var dias =
+				["Lunes", "Martes", "Miércoles", "Jueves", "Viernes", "Sábado", "Domingo"];
+			for (i in dias) {
+				alert(dias[i]);
+			}
+
+		}
+
+		function dotest(element, event) {
+			const url = "http://localhost:8081/modifyUser";
+			const data = {
+				id: element.getElementsByTagName("td")[0].textContent,
+				user: element.getElementsByTagName("td")[1].textContent,
+				rol: element.getElementsByTagName("td")[2].textContent,
+				estado: element.getElementsByTagName("td")[3].textContent
+			}
+			axios({
+				method: "post",
+				url: url,
+				data: {
+					data
+				}
+			}).then(data => console.log(data)).catch(err => console.log(err))
+		}
 
 	</script>
-
 </head>
 
+
+
 <body>
-<div id="contenedor">
-	<div id="central">
-		<div id="normal">
-			<div class="titulo">
-				Bienvenido
-			</div>
-			<div id="formButtons">
-				<button name="Mostrar" onclick="showUsersFunc()" title="Mostrar" type="submit">Mostrar usuarios</button>
-			</div>
+	<div id="assignedRol">
+		<p>Este usuario tiene permisos de normal user</p>
+		<hr>
+	</div>
+	<div id="contenedor">
+		<div id="formButtons" class="container justify-content-center">
+			<button class="btn btn-primary" name="MostrarE" onclick="showEmployeersFunc()" title="MostrarE"
+				type="submit">Show employers</button>
+			<button class="btn btn-primary" name="EjercicioJs" onclick="ejercicioClick()" title="EjercicioJs"
+				type="submit">Ejercicio Js</button>
 		</div>
-		<div class="inferior">
-			<a href="#">Volver</a>
+
+		<div id="contenedorFuncionalidades">
+			<div id="addUsers">
+				<form id="loginformAdd" method="POST" th:action="@{/addUser}">
+					<input name="username" class="form-control" placeholder="usuario" required type="text">
+					<input name="password" class="form-control" placeholder="Contraseña" required type="password">
+					<select name="rol" required class="form-control">
+						<option value="1">admin</option>
+						<option selected value="2">advanced</option>
+						<option value="3">basic</option>
+					</select><br><br>
+					<button type="submit" title="Crear" name="Crear" class="btn btn-outline-primary">Crear
+						usuario</button>
+				</form>
+			</div>
+			<div id="addEmployeers">
+				<form id="loginformAdd" method="POST" th:action="@{/addEmployeer}">
+					<input name="nombre" class="form-control" placeholder="usuario" required type="text">
+					<input name="apellidos" class="form-control" placeholder="usuario" required type="text">
+					<input name="dni" class="form-control" placeholder="dni" required type="text">
+					<input name="fecha_alta" class="form-control" placeholder="fecha_alta" required type="date">
+					<input name="fecha_alta" class="form-control" placeholder="fecha_alta" required type="date">
+					<input name="jornadas_id" class="form-control" placeholder="jornadas_id" required
+						type="text"><br><br>
+					<button type="submit" title="Crear" name="Crear" class="btn btn-outline-primary">Crear
+						usuario</button>
+				</form>
+			</div>
+			<div id="showUsers">
+				<div class="row align-items-start">
+					<div class="col">
+						<table class="table table-dark table-hover">
+							<br>
+							<thead>
+								<tr>
+									<th>Id</th>
+									<th>Username</th>
+									<th>Rol</th>
+									<th>Estado</th>
+
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="u: ${listaUsers}" onkeyup="javascript:dotest(this,event);">
+									<td th:text="${u.id}"></td>
+									<td th:text="${u.user}" contenteditable='true'></td>
+									<td th:text="${u.role.getRol()}" contenteditable='true'></td>
+									<td th:text="${u.enabled == 1 } ? 'ACTIVO' : 'DESHABILITADO'"
+										contenteditable='true'>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+			<div id="showEmployeers">
+				<div class="row align-items-start">
+					<div class="col">
+						<table class="table table-dark table-hover">
+							<br>
+							<thead>
+								<tr>
+									<th>Id</th>
+									<th>Name</th>
+									<th>Surnames</th>
+									<th>Dni</th>
+									<th>Fecha Alta</th>
+									<th>Fecha Baja</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="u: ${listaEmployeers}" onkeyup="javascript:dotest(this,event);">
+									<td th:text="${u.id}"></td>
+									<td th:text="${u.nombre}" contenteditable='true'></td>
+									<td th:text="${u.apellidos}" contenteditable='true'></td>
+									<td th:text="${u.dni}" contenteditable='true'></td>
+									<td th:text="${u.fecha_alta }" contenteditable='true'></td>
+									<td th:text="${u.fecha_baja }" contenteditable='true'></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+			<div id="delUser">
+				<form id="loginformDel" method="DELETE" th:action="@{/deleteUser}">
+					<input name="userId" placeholder="userId" required type="text" class="form-control">
+					<button type="submit" class="btn btn-outline-primary">Delete</button>
+				</form>
+			</div>
+			<div id="delEmployeers">
+				<form id="loginformDel" method="DELETE" th:action="@{/deleteUser}">
+					<input name="userId" placeholder="userId" required type="text" class="form-control">
+					<button type="submit" class="btn btn-outline-primary">Delete</button>
+				</form>
+			</div>
+			<div id="practicandoJS">
+				<select name="frutas" id="frutas" required class="form-control">
+					<option value="Fruta 1">Fruta 1</option>
+					<option value="Fruta 2">Fruta 2</option>
+					<option value="Fruta 3">Fruta 3</option>
+					<option value="Fruta 3">Fruta 4</option>
+					<option value="Fruta 3">Fruta 5</option>
+				</select>
+				<select name="pescados" id="pescados" required class="form-control">
+					<option value="Pescado 1">Pescado 1</option>
+					<option value="Pescado 2">Pescado 2</option>
+					<option value="Pescado 3">Pescado 3</option>
+					<option value="Pescado 3">Pescado 4</option>
+					<option value="Pescado 3">Pescado 5</option>
+				</select>
+				<select name="carnes" id="carnes" required class="form-control">
+					<option value="Carne 1">Carne 1</option>
+					<option value="Carne 2">Carne 2</option>
+					<option value="Carne 3">Carne 3</option>
+					<option value="Carne 4">Carne 4</option>
+					<option value="Carne 5">Carne 5</option>
+				</select>
+				<select name="drogueria" id="drogueria" required class="form-control">
+					<option value="Drogueria 1">Drogueria 1</option>
+					<option value="Drogueria 2">Drogueria 2</option>
+					<option value="Drogueria 3">Drogueria 3</option>
+					<option value="Drogueria 4">Drogueria 4</option>
+					<option value="Drogueria 5">Drogueria 5</option>
+				</select>
+				<button class="btn btn-primary" name="EjercicioJs2" onclick="clickEjercicio()" title="EjercicioJs2"
+					type="submit">Recoger</button>
+			</div>
+
 		</div>
 	</div>
-</div>
+
 </body>
 
 </html>
